--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <head>
-  <meta http-equiv='refresh' content='0; URL=http://example.com/'>
+  <meta http-equiv='refresh' content='0; URL=http://hemaldias.me/hemalportfolio.pdf'>
 </head>
