--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: A minimal, fixed sidebar grid portfolio Jekyll theme.
-description: A minimal, fixed sidebar grid portfolio Jekyll theme.
+title: Hemal Dias - Portfolio
+description: A collection of featured work by Hemal Dias. 
 featured_image: /images/social.jpg
 ---
 
