meta data update

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Hemal Dias - Portfolio
-description: A collection of featured work by Hemal Dias. 
+title: Portfolio
+description: A design engineer interested in technology, entrepreneurship and supporting under-represented communities. 
 featured_image: /images/social.jpg
 ---
 
