--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Portfolio
-description: A design engineer interested in technology, entrepreneurship and supporting under-represented communities. 
+description: A design engineer passionate about technology, entrepreneurship and supporting under-represented communities. 
 featured_image: /images/social.jpg
 ---
 
