--- a/playground/vr-room/index.html
+++ b/playground/vr-room/index.html
@@ -3,18 +3,41 @@
   <head>
     <title>VR Room Viewer</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
   </head>
   <body>
     <a-scene background="color: #ECECEC">
-      <!-- Replace this with your model URL -->
+
+      <!-- Load local GLB -->
       <a-assets>
         <a-asset-item id="roomModel" src="room.glb"></a-asset-item>
       </a-assets>
 
+      <!-- Optional sky background -->
+      <a-sky color="#87CEEB"></a-sky>
+
+      <!-- Model in scene -->
       <a-entity gltf-model="#roomModel" position="0 0 0" rotation="-90 0 0"></a-entity>
 
+      <!-- Teleportable ground plane -->
+      <a-plane class="teleportable"
+               position="0 0 0"
+               rotation="-90 0 0"
+               width="100"
+               height="100"
+               color="#ffffff"
+               opacity="0.001">
+      </a-plane>
 
-      <a-entity camera look-controls wasd-controls position="0 1.6 3"></a-entity>
+      <!-- Camera rig with teleport + gaze controls -->
+      <a-entity id="rig" movement-controls position="0 0 3">
+        <a-entity camera look-controls wasd-controls-enabled="false" position="0 1.6 0"></a-entity>
+        <a-entity laser-controls="hand: right"
+                  raycaster="objects: .teleportable"
+                  line="color: black; opacity: 0.75">
+        </a-entity>
+      </a-entity>
+
     </a-scene>
   </body>
 </html>
